objects/A2__c.object
<CustomObject>
    <fields>
        <fullName>F3__c</fullName>
        <label>F3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Metal Enclosed - HVL/HVLcc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F4__c</fullName>
        <label>F4</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Metal Enclosed - HVL/HVLcc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>F5__c</fullName>
        <label>F5</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Metal Enclosed - HVL -/ HVLcc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>A2</label>
    <nameField>
        <label>A2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>A2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>